[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "caslake-status"
version = "0.1.0"
description = "Cluster status plotter for Midway3 caslake"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
